# tea

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  README.md
.github/workflows/: ci.yml  tea-ci.yaml
cmake/: FindGreenplum.cmake  grpc.cmake
extension/: CMakeLists.txt  tea.control.in  tea_downgrade_to_old.sql.in  tea_ext_create.sql  tea_ext_update.sql  tea_fdw_create.sql  tea_fdw_update.sql  tea_iceberg_metrics_create.sql  tea_iceberg_metrics_drop.sql  tea_install.sql.in  tea_reltuples_create.sql  tea_reltuples_drop_gp5.sql  tea_reltuples_drop_gp6.sql  tea_secondary.control.in  tea_stats_create.sql  tea_stats_update.sql  tea_upgrade.sql.in  tea_upgrade_from_old.sql.in
hack/: check-format
tea/: CMakeLists.txt  reader.cpp  reader.h
tea/cli/: CMakeLists.txt  cli.cpp
tea/common/: CMakeLists.txt  batch_size.cpp  batch_size.h  cancel.h  config.cpp  config.h  file_reader_provider.cpp  file_reader_provider.h  iceberg_fs.h  iceberg_json.cpp  iceberg_json.h  iceberg_stats_filter.h  reader_properties.cpp  reader_properties.h  row_groups_utils.cpp  row_groups_utils.h  utils.cpp  utils.h
tea/common/ut/: batch_size_test.cpp
tea/compression/: CMakeLists.txt  arrow_codec.cpp  arrow_codec.h  compression_registry.cpp  compression_registry.h  compressor.h  identity.cpp  identity.h  lz4.cpp  lz4.h  snappy.cpp  snappy.h
tea/compression/ut/: test_compressors.cpp
tea/debug/: CMakeLists.txt  stats_state.proto  stats_to_proto.cpp  stats_to_proto.h
tea/filter/: CMakeLists.txt
tea/filter/gp/: CMakeLists.txt  array_converter.cpp  array_converter.h  common.h  convert.cpp  convert.h  datetime.cpp  datetime.h  pg_array.cpp  pg_array.h  serialized_filter.h  types_mapping.cpp  types_mapping.h  validate.cpp  validate.h
tea/filter/teapot_file_filter/: CMakeLists.txt  filter.cpp  filter.h  node.cpp  node.h  serializer.cpp  serializer.h
tea/gpext/: CMakeLists.txt  CPPLINT.cfg  tea.c  tea.map  tea_column.h  tea_common.c  tea_common.h  tea_exttable.c  tea_exttable_proj.c  tea_exttable_proj.h  tea_fdw.c  tea_fdw_options.c  tea_fdw_options.h  tea_fdw_proj.c  tea_fdw_proj.h  tea_import.c  tea_import.h  tea_reader.cpp  tea_reader.h  tea_stats.c  tea_tuple.c  tea_tuple.h
tea/metadata/: CMakeLists.txt  access_empty.cpp  access_empty.h  access_file.cpp  access_file.h  access_iceberg.cpp  access_iceberg.h  access_teapot.cpp  access_teapot.h  entries_stream_config.cpp  entries_stream_config.h  estimator.cpp  estimator.h  metadata.h  planner.cpp  planner.h
tea/observability/: CMakeLists.txt  ext_stats.h  planner_stats.h  reader_stats.cpp  reader_stats.h  return_fl.cpp  return_fl.h  s3_stats.h  tea_log.cpp  tea_log.h
tea/samovar/: CMakeLists.txt  batcher.cpp  batcher.h  planner.cpp  planner.h  samovar_data_client.cpp  samovar_data_client.h  single_queue_client.cpp  single_queue_client.h  utils.cpp  utils.h
tea/samovar/cli/: CMakeLists.txt  cli.py  main.cpp  memory_keys.py  requirements.txt
tea/samovar/network_layer/: CMakeLists.txt  backoff.cpp  backoff.h  redis_client.cpp  redis_client.h  samovar_client.cpp  samovar_client.h
tea/samovar/proto/: samovar.proto
tea/samovar/ut/: mock_gp.c  redis_test.cpp  utils_test.cpp
tea/smoke_test/: CMakeLists.txt  analyze_test.cpp  cancel_test.cpp  complex_queries_test.cpp  count_test.cpp  delete_test.cpp  deleted_files_test.cpp  encoding_test.cpp  environment.cpp  environment.h  equality_delete_test.cpp  fragment_info.cpp  fragment_info.h  iceberg_stats_test.cpp  iceberg_test.cpp  large_metadata_test.cpp  mapping_test.cpp  mismatching_types_test.cpp  mock_teapot.cpp  mock_teapot.h  negative_server_test.cpp  nested_loop_join_test.cpp  no_column_test.cpp  part_of_file_test.cpp  positional_delete_test.cpp  potential_rg_filter_test.cpp  pq.cpp  pq.h  projection_test.cpp  real_parquet_test.cpp  row_group_filter_test.cpp  run_tests.cpp  samovar_test.cpp  self_join_test.cpp  session_test.cpp  spark_generated_test_base.h  stats_state.cpp  stats_state.h  stats_test.cpp  system_column_test.cpp  (+3 more)
tea/smoke_test/filter_tests/: all_any_test.cpp  arithmetic_test.cpp  bitwise_test.cpp  case_test.cpp  coalesce_test.cpp  comparison_test.cpp  filter_test_base.cpp  filter_test_base.h  function_test.cpp  in_test.cpp  logical_test.cpp  many_files_filter_test.cpp  miscellaneous_test.cpp  name_mapping_test.cpp  null_test.cpp  returned_error_test.cpp  string_test.cpp  temporal_arithmetic_test.cpp  temporal_convert_test.cpp  temporal_test.cpp  unary_test.cpp
tea/smoke_test/perf_test/: json_table.cpp  json_table.h  json_test.cpp  main.cpp  positional_delete_table.cpp  positional_delete_table.h  positional_delete_test.cpp  table.cpp  table.h  test.cpp
tea/smoke_test/tpch/: main.cpp
tea/table/: CMakeLists.txt  bridge.cpp  bridge.h  converter.h  filter_convert.cpp  filter_convert.h  gp_funcs.cpp  gp_funcs.h  gp_fwd.h  json_substitutor.cpp  json_substitutor.h  numeric.cpp  numeric.h  numeric_var.cpp  numeric_var.h  shared_state.cpp  shared_state.h
tea/table/ut/: bridge_test.cpp  config_test.cpp  json_substitutor_test.cpp  mock_gp.c  numeric_var_test.cpp  profile_to_tables_test.cpp
tea/test_utils/: CMakeLists.txt  column.h  common.h  location.h  metadata.cpp  metadata.h  nessie_utils.cpp  nessie_utils.h  oid.h
tea/util/: CMakeLists.txt  cancel.h  defer.h  int128.h  logger.h  lru_cache.h  measure.h  measure_c.h  multishot_timer.cpp  multishot_timer.h  signal_blocker.h  thread_pool.h
tea/util/ut/: cancel_token_test.cpp  lru_cache_test.cpp  thread_pool_test.cpp
teapot/: CMakeLists.txt  cli.cpp  compare_iceberg.cpp  mock_server.cpp  teapot.proto
test/: check_log_events.py  prepare_tpch_data.sh  ssh_aws_key.sh  start-gp.sh  upgrade_running.sh
test/config/: init.sql  profile-to-tables.json  tea-config-schema.json  tea-config.json  tea.cfg
test/iceberg/warehouse/dangling_deletes/: create.sql
test/iceberg/warehouse/dangling_deletes/data/: 20250910_130929_00002_yek99-a0e41fe0-dec9-4fcb-a053-5714c0a0cca0.parquet  (+6 more)
test/iceberg/warehouse/parquet/: no_row_group_file_offset.parquet
(+72 files in other folders)
